correcting spacing of hamburger dropdown elements

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a {
 }
 
 #toggle1:checked ~ .menu1 {
-  height: 300px;
+  height: 320px;
 }
 
 
@@ -215,8 +215,7 @@ a {
 
 .browseByText {
   width: 100%;
-  margin: 0;
-  /* padding: 10px 0; */
+  margin: 15px 0 0 0;
   font: 700 20px 'Segoe UI';
   color: #fff;
   text-decoration: none;
